# Timothe-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  config.example.toml  docker-compose.yml  recipe.json
.github/workflows/: docker-image.yml
src/: bot.rs  handler.rs  main.rs
src/calendar/: calendar.rs  manager.rs  mod.rs  schedule.rs  store.rs
src/cfg/: mod.rs
src/commands/: mod.rs
src/commands/schedule/: mod.rs  summary.rs
