[package]
name = "timothe-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "*", features = ["full"] }
config = { version = "*", features = ["toml"] }
serde = { version = "*", features = ["rc"] }
log = "*"
pretty_env_logger = "*"
poise = "0.3.0"
futures = "*"
reqwest = { version = "*", features = ["rustls-tls" ] }
bytes = "*"
futures-util = "0.3.24"
chrono = { version = "*", features = ["serde"] }
saffron = "0.1.0"
chrono-tz = "0.6.3"
shellexpand = "2.1.2"
dirs = "4.0.0"
postcard = { version = "1.0.0", features = ["alloc"] }
anyhow = "*"
humantime = "2.1.0"
regex = "*"

[dependencies.ical]
version = "0.7.*"
default-features = false
features = ["ical", "vcard"]