[package]
name = "timothe-rs"
version = "0.1.2"
edition = "2021"
license_file = "LICENSE"
license = "AGPL"
repository = "https://github.com/MatthieuCoder/Timothe-rs"
description = "Simple discord bot that tracks ics schedules"
keywords =  ["bot", "edt", "schedule", "tracking", "events", "school"]
categories = ["bot"]

[dependencies]
tokio = { version = "1.21.2", features = ["full"] }
config = { version = "0.13.2", features = ["toml"] }
serde = { version = "1.0.147", features = ["rc"] }
log = "0.4.17"
pretty_env_logger = "0.4.0"
poise = "0.3.0"
futures = "0.3.25"
reqwest = { version = "0.11.12", features = ["rustls-tls" ] }
bytes = "1.2.1"
futures-util = "0.3.24"
chrono = { version = "0.4.12", features = ["serde"] }
saffron = "0.1.0"
chrono-tz = "0.6.3"
shellexpand = "2.1.2"
dirs = "4.0.0"
postcard = { version = "1.0.0", features = ["alloc"] }
anyhow = "1.0.66"
humantime = "2.1.0"
regex = "1.6.0"

[dependencies.ical]
version = "0.7.*"
default-features = false
features = ["ical", "vcard"]