[package]
name = "timothe-rs"
version = "0.1.3"
edition = "2021"
license_file = "LICENSE"
license = "AGPL"
repository = "https://github.com/MatthieuCoder/Timothe-rs"
description = "Simple discord bot that tracks ics schedules"
keywords =  ["bot", "edt", "schedule", "tracking", "events", "school"]
categories = ["bot"]

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
config = { version = "0.15.14", features = ["toml"] }
serde = { version = "1.0.219", features = ["rc"] }
log = "0.4.27"
pretty_env_logger = "0.5.0"
poise = "0.6.1"
futures = "0.3.31"
reqwest = { version = "0.12.23", features = ["rustls-tls" ] }
bytes = "1.10.1"
futures-util = "0.3.31"
chrono = { version = "0.4.41", features = ["serde"] }
saffron = "0.1.0"
chrono-tz = "0.10.4"
shellexpand = "3.1.1"
dirs = "6.0.0"
postcard = { version = "1.1.3", features = ["alloc"] }
anyhow = "1.0.99"
humantime = "2.2.0"
regex = "1.11.2"

[dependencies.ical]
version = "0.7.*"
default-features = false
features = ["ical", "vcard"]
